forgot password, resend email verification token and reset password

--- a/backend/views/resetPassword.handlebars
+++ b/backend/views/resetPassword.handlebars
@@ -1,4 +1,6 @@
-<h1>Welcome, {{fullName}}!</h1>
-<p>We are excited to have you on board.</p>
-<p>Your registration is successful.</p>
-<p>Please verify your email <a href='{{url}}' target='_blank'>Click here</a></p>
+<h1>Hello, {{fullName}}!</h1>
+<p>Please find the link below to reset your password</p>
+<p>Please reset your password
+  <a href='{{url}}' target='_blank'>Click here</a>
+</p>
+<p style='color:red;'>Link valid till 1 hour after sent</p>
